Wed Jun  7 13:47:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* include/netinet/in_systm.h: New file.
	* include/cygwin/in_systm.h: Ditto.

Thu Jun  1 01:55:45 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc: Remove unneeded include.
	* dcrt0.cc: Wrap LoadDLLfunc stuff in dummy function.
	* init.cc: Ditto.
	* uinfo.cc: Ditto.

2000-05-31  DJ Delorie  <dj@cygnus.com>

	* include/cygwin/version.h: use decimal, NOT octal

Wed May 31 16:40:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_disk_file::open): Check for executable
	even if ntsec is on if filesystem doesn't support ACLs.

Wed May 31 15:57:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* dcrt0.cc: Use LoadDLLfuncEx for loading Crypto API functions
	with parameter `notimp' set to 1.

Tue May 30 16:58:33 2000  Christopher Faylor <cgf@cygnus.com>

	* path.cc (mount_info::conv_to_win32_path): Previous patch was too
	aggressive in adding a trailing slash.

Mon May 29 20:31:01 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Remove libadvapi32.a.
	* autoload.h: Add additional field to autoload block for handling
	unimplemented functions.
	(LoadDLLfuncEx): New function which accepts additional parameter for
	controlling unimplemented function behavior.
	(LoadDLLfunc): Use LoadDLLfuncEx.
	* dcrt0.cc: Use new arguments for LoadDLLfunc.  Add advapi32 routines.
	(noload): Rewrite in assembler.  Handle new unimplemented function
	type.
	* exceptions.cc: Eliminate another vestige of StackWalk stuff.
	* net.cc: Use new arguments for LoadDLLfunc.
	* uinfo.cc: Ditto.

Mon May 29 20:18:47 2000  Christopher Faylor <cgf@cygnus.com>

	* config.h.in: Remove obsolete define.
	* path.h (isdrive): New macro.
	* dcrt0.cc (globify): Use new macro to determine if a string refers to
	an MS-DOS drive.
	* environ.cc (winenv): Ditto.
	* spawn.cc (find_exec): Ditto.
	* path.cc (get_raw_device_number): Ditto.
	(mount_info::conv_to_posix_path): Ditto.
	(chdir): Ditto.